<resources>
    <string name="app_name">Mirumon</string>
    <string name="add_group_button_text">Create a group</string>
    <string name="delimeter">::</string>
    <string name="text_placeholder">text</string>
    <string name="device_item_name">name</string>
    <string name="device_item_user">user</string>
    <string name="device_item_domain">domain</string>
    <string name="common_info">common info</string>
    <string name="domain">domain</string>
    <string name="current_user">current user</string>
    <string name="workgroup">workgroup</string>
    <string name="PC_name">PC name</string>
    <string name="programs">programs</string>
    <string name="version">version</string>
    <string name="vendor">vendor</string>
    <string name="name">name</string>
    <string name="architecture">architecture</string>
    <string name="os_serial_number">OS serial number</string>
    <string name="os_version">OS version</string>
    <string name="os">OS</string>
    <string name="device_info">Device Info</string>
    <string name="feature_tba">This feature is under development</string>
    <string name="error_message">An Error just occurred. Check your connection or ping your backend.</string>
    <string name="confirm_dialog_message">Shutdown the selected PC(s)?</string>
    <string name="offline_message">This PC is not online</string>
    <string name="confirm_ok">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="execute">run command</string>
    <string name="execute_hint">explorer, notepad, etc…</string>
    <string-array name="common_titles">
        <item name="command_overview">Overview</item>
        <item name="common_software">Software</item>
    </string-array>

</resources>
