<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.presentation.common.overview.OverviewFragment">

    <TextView
        android:id="@+id/os_label_tv"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/os"
        style="@style/infoLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/common_os_tv"
        style="@style/infoTextView"
        android:layout_marginStart="@dimen/dp_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/os_label_tv" />


    <TextView
        android:id="@+id/version_label_tv"
        style="@style/infoLabel"
        android:text="@string/os_version"
        app:layout_constraintTop_toBottomOf="@id/common_os_tv"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <TextView
        android:id="@+id/common_version_tv"
        style="@style/infoTextView"
        android:layout_marginStart="@dimen/dp_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/version_label_tv" />


    <TextView
        android:id="@+id/arch_label_tv"
        style="@style/infoLabel"
        android:text="@string/architecture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/common_version_tv" />


    <TextView
        android:id="@+id/common_arch_tv"
        style="@style/infoTextView"
        android:layout_marginStart="@dimen/dp_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arch_label_tv" />

    <TextView
        android:id="@+id/serial_label_tv"
        style="@style/infoLabel"
        android:text="@string/os_serial_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/common_arch_tv" />


    <TextView
        android:id="@+id/common_serial_tv"
        style="@style/infoTextView"
        android:layout_marginStart="@dimen/dp_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serial_label_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>