<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:nestedScrollingEnabled="true"
    android:overScrollMode="ifContentScrolls"
    tools:context=".main.presentation.device.DeviceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/device_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/device_back_btn"
        app:layout_constraintBottom_toBottomOf="@id/device_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/device_toolbar"
        style="@style/backImageButton" />

    <TextView
        style="@style/infoLabel"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="0dp"
        android:text="@string/device_info"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/device_toolbar"
        app:layout_constraintLeft_toRightOf="@id/device_back_btn"
        app:layout_constraintTop_toTopOf="@id/device_toolbar" />

    <ImageView
        android:id="@+id/device_indicator_iv"
        android:layout_width="@dimen/dp_device_indicator_aspect"
        android:layout_height="@dimen/dp_device_indicator_aspect"
        android:layout_marginStart="@dimen/dp_20"
        app:layout_constraintBottom_toBottomOf="@id/device_icon_iv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/device_icon_iv"
        app:srcCompat="@drawable/online_indicator" />

    <ImageView
        android:id="@+id/device_icon_iv"
        android:layout_width="@dimen/dp_list_item_width"
        android:layout_height="@dimen/dp_list_item_height"
        android:layout_marginTop="@dimen/dp_20"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toRightOf="@id/device_indicator_iv"
        app:layout_constraintTop_toBottomOf="@id/device_toolbar"
        app:srcCompat="@drawable/device" />

    <TextView
        android:id="@+id/name_label_tv"
        style="@style/infoLabel"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/PC_name"
        app:layout_constraintLeft_toRightOf="@id/device_icon_iv"
        app:layout_constraintTop_toTopOf="@id/device_icon_iv" />

    <TextView
        android:id="@+id/device_name_tv"
        android:layout_width="0dp"
        android:paddingEnd="0dp"
        style="@style/infoTextView"
        app:layout_constraintLeft_toLeftOf="@id/name_label_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_label_tv" />

    <TextView
        android:id="@+id/domain_label_tv"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/domain"
        style="@style/infoLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_icon_iv" />

    <TextView
        android:id="@+id/device_domain_tv"
        android:layout_marginStart="@dimen/dp_15"
        style="@style/infoTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/domain_label_tv" />


    <TextView
        android:id="@+id/workgroup_label_tv"
        style="@style/infoLabel"
        android:text="@string/workgroup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_domain_tv" />


    <TextView
        android:id="@+id/device_workgroup_tv"
        android:layout_marginStart="@dimen/dp_15"
        style="@style/infoTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workgroup_label_tv" />


    <TextView
        android:id="@+id/user_label_tv"
        style="@style/infoLabel"
        android:text="@string/current_user"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_workgroup_tv" />


    <TextView
        android:id="@+id/device_user_tv"
        android:layout_marginStart="@dimen/dp_15"
        style="@style/infoTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_label_tv" />


    <Button
        android:id="@+id/device_common_btn"
        style="@style/RegularButton"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_30"
        android:drawableStart="@drawable/ic_info"
        android:drawableEnd="@drawable/ic_goto"
        android:text="@string/common_info"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_user_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>