<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_15"
    android:layout_marginTop="@dimen/dp_10"
    android:layout_marginEnd="@dimen/dp_15"
    android:background="@drawable/text_background"
    android:paddingBottom="@dimen/dp_10">

    <TextView
        android:id="@+id/name_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:fontFamily="@font/lato_bold"
        android:text="@string/name"
        android:textColor="@color/colorMainFont"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/software_name_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/software_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_5"
        android:fontFamily="@font/lato_bold"
        android:paddingBottom="@dimen/dp_5"
        android:textColor="@color/colorAccentFont"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_label_tv" />


    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="#21000000"
        app:layout_constraintTop_toBottomOf="@id/software_name_tv" />


    <TextView
        android:id="@+id/vendor_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:fontFamily="@font/lato_bold"
        android:text="@string/vendor"
        android:textColor="@color/colorMainFont"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/software_name_tv"
        app:layout_constraintTop_toTopOf="@id/divider2" />

    <TextView
        android:id="@+id/software_vendor_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:fontFamily="@font/lato_bold"
        android:paddingBottom="@dimen/dp_5"

        android:textColor="@color/colorAccentFont"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vendor_label_tv" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="#21000000"
        app:layout_constraintBottom_toTopOf="@id/version_label_tv"
        app:layout_constraintTop_toBottomOf="@id/software_vendor_tv" />

    <TextView
        android:id="@+id/version_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:text="@string/version"
        android:textColor="@color/colorMainFont"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/software_name_tv"
        app:layout_constraintTop_toTopOf="@id/divider" />

    <TextView
        android:id="@+id/software_version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/colorAccentFont"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/version_label_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>